@@ -426,6 +426,9 @@ BUGFIXES:
 
   ZOOKEEPER-1778. Use static final Logger objects (Rakesh R via michim)
 
+  ZOOKEEPER-1551. Observers ignore txns that come after snapshot and UPTODATE 
+  (thawan, fpj via thawan)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
